updated POM and JAva docs issue